--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 </table>
 
 <hr size ="3" nonshade />
-<a href="C:\Users\TANYA MUDGAL\Documents\Web Development\HTML - Personal Site\hobbies.html"><h3>My Hobbies</h3></a>
-<a href="C:\Users\TANYA MUDGAL\Documents\Web Development\HTML - Personal Site\Contact Me.html"> <h3>Contact Me</h3> </a>
+<a href="hobbies.html"><h3>My Hobbies</h3></a>
+<a href="Contact Me.html"> <h3>Contact Me</h3> </a>
 <!--  <em>Student</em>
   <br />
   <i>Student</i> -->
