--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <td>School Education</td>
     </tr>
     <tr>
-      <td>2020</td>
+      <td>2020-Present</td>
       <td>Graduation</td>
     </tr>
   </tbody>
@@ -54,10 +54,10 @@
         <tbody>
           <tr>
             <td>Web Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>Bitcoin Development</td>
+            <td>C++ Programming</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
         </tbody>
@@ -65,11 +65,11 @@
       <td> <table cellspacing = "10">
         <tbody>
           <tr>
-            <td>Video Editing</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>C Programming</td>
+            <td>⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>Stock Marketing</td>
+            <td>Data Structures and Algorithms</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
         </tbody>
